Definition of abortWorkflow (v2)
