# plugins/orchestrator-common/src/auto-generated/api/definition.ts
@@ -431,6 +431,46 @@ const OPENAPI = `
           }
         }
       }
+    },
+    "/v2/workflows/{workflowId}/abort": {
+      "delete": {
+        "summary": "Abort a workflow instance",
+        "operationId": "abortWorkflow",
+        "description": "Aborts a workflow instance identified by the provided workflowId.",
+        "parameters": [
+          {
+            "name": "workflowId",
+            "in": "path",
+            "required": true,
+            "description": "The identifier of the workflow instance to abort.",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Error aborting workflow",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -789,5 +829,5 @@ const OPENAPI = `
       }
     }
   }
-}`
+}`;
 export const openApiDocument = JSON.parse(OPENAPI);
